2011-12-28 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h: Added GSHashBytes().
	* Source/CFString.c: Use GSHashBytes() for hashing strings.
	* Source/CFUUID.c: Some changes to the Windows code.
	* Source/GSHashTable.c:
	* Source/GSHashTable.h: Copy call backs.

2011-12-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBitVector.c: Some work on CFBitVector.

2011-12-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFBitVector.c:
	* Source/CFBinaryHeap.c:
	* Headers/CoreFoundation/CFBinaryHeap.h:
	* Headers/CoreFoundation/CFBitVector.h: Added skeleton for
	CFBinaryHeap and CFBitVector.

2011-12-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFURL.h: Populate with definitions up 
	to Mac OS X 10.7.

2011-12-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFXMLParser.c: Added some code to CFXMLTree.
	* Source/CFTree.c: Changes to support CFXMLTree.
	* Source/Identifier.m: Added CFXMLTree error dictionary keys.
	* Headers/CoreFoundation/CFXMLNode.h:
	* Headers/CoreFoundation/CFXMLParser.h: Moved declarations to 
	correct header.

2011-12-18 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFXMLNode.c: Added rest of the code.

2011-12-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFXMLNode.c: Started adding code.

2011-12-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFXMLNode.h:
	* Headers/CoreFoundation/CFXMLParser.h:
	* Source/CFXMLNode.c:
	* Source/CFXMLParser.c:
	* Source/GNUmakefile: Added skeleton for XML types.

2011-12-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTree.c: Added code.

2011-12-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c:
	* Source/CFTree.c:
	* Headers/CoreFoundation/CFTree.h: Add CFTree skeleton.

2011-12-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBag.c:
	* Source/CFDictionary.c:
	* Source/CFSet.c:
	* Source/GSHashTable.c:
	* Source/GSHashTable.h: Redesigned GSHashTable to reduce code 